<resources>
    <string name="app_name">My Friend</string>
    <string name="btn_cancel">Batal</string>
    <string name="btn_delete">Hapus</string>
    <string name="btn_save">Simpan</string>
    <string name="button_edit">Edit</string>
    <string name="dialog_delete_friend">Hapus teman ini?</string>
    <string name="error_empty">Belum diisi</string>
    <string name="hint_description">Tentang</string>
    <string name="hint_instagram">Instagram</string>
    <string name="hint_name">Nama</string>
    <string name="label_whos_new_friend">Siapa teman barumu?</string>
    <string name="text_intro">My FRIENDS</string>
</resources>